objects/CallidusLog__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ErrorDescription__c</fullName>
        <label>ErrorDescription</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ObjectId__c</fullName>
        <label>ObjectId</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ObjectType__c</fullName>
        <label>ObjectType</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PayeeId__c</fullName>
        <label>PayeeId</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ObjectId__c</columns>
        <columns>PayeeId__c</columns>
        <columns>ErrorDescription__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Amount__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Nov</fullName>
        <columns>NAME</columns>
        <columns>ObjectId__c</columns>
        <columns>PayeeId__c</columns>
        <columns>ErrorDescription__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Amount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>greaterThan</operation>
            <value>10/31/2016 12:00 AM</value>
        </filters>
        <label>Nov</label>
        <language>en_US</language>
    </listViews>
</CustomObject>